<resources>
    <string name="app_name">Image Cure</string>
    <string name="action_settings">HELLO</string>
    <string name="hello_world">How is your day?</string>
    <!--<string-array name="button">sad,happy,quiet,excited,blue</string-array>-->
    <string name="buttom1">happy</string>
    <string name="buttom2">sad</string>
    <string name="buttom3">angry</string>
    <string name="buttom4">stressed</string>
    <string name="buttom5">nervous</string>
    <string name="buttom6">grummpy</string>
</resources>
