<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hilarydeng.omg.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="100dp"
        android:text="@string/hello_world"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sad"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/buttom1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:src="@drawable/cat_angry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingTop="150dp"
        android:orientation="vertical" >

            <Button
                android:id="@+id/happy"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/buttom2"/>

            <Button
                android:id="@+id/quiet"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/happy"
                android:text="@string/buttom3"/>

            <Button
                android:id="@+id/excited"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/quiet"
                android:text="@string/buttom4"/>

            <Button
                android:id="@+id/blue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/excited"
                android:text="@string/buttom5" />


    </LinearLayout>

</RelativeLayout>


